--- a/gestures/res/values-zh-rTW/strings.xml
+++ b/gestures/res/values-zh-rTW/strings.xml
@@ -14,16 +14,16 @@
 -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="gesture_screen_off_title">HTC鎖屏手勢</string>
+    <string name="gesture_screen_off_title">HTC鎖定畫面手勢</string>
     <string name="gesture_edge_sense_title">HTC Edge Sense</string>
     <string name="style_summary">手勢預覽</string>
 
     <!-- Gestures: Touchscreen gestures -->
     <string name="touchscreen_gestures_haptic_feedback_title">觸控震動</string>
     <string name="touchscreen_gestures_haptic_feedback_summary">檢測到觸控螢幕手勢時振動</string>
-    <string name="touchscreen_gestures_display_title">觸屏手勢設定</string>
+    <string name="touchscreen_gestures_display_title">觸控螢幕手勢設定</string>
     <string name="touchscreen_swipe_up_title">用一根手指向上滑動</string>
-    <string name="touchscreen_double_swipe_down_title">用一根手指雙次向下滑动</string>
+    <string name="touchscreen_double_swipe_down_title">用一根手指雙次向下滑動</string>
     <string name="touchscreen_swipe_left_title">用一根手指向左滑動</string>
     <string name="touchscreen_swipe_right_title">用一根手指向右滑動</string>
 
@@ -33,15 +33,15 @@
     <string name="squeeze_short_title">自訂短握壓動作</string>
     <string name="squeeze_long_title">自訂長握壓動作</string>
     <string name="squeeze_gestures_enabled">啟用握壓手勢</string>
-    <string name="squeeze_gestures_disabled">禁用握壓手勢</string>
-    <string name="squeeze_long_activation_time">長握壓觸发時間</string>
+    <string name="squeeze_gestures_disabled">停用握壓手勢</string>
+    <string name="squeeze_long_activation_time">長握壓觸發時間</string>
     <string name="squeeze_force_title">握壓力道等級</string>
     <string name="squeeze_force_summary">調整握壓力道等級</string>
     <string name="squeeze_advanced_settings_title">握壓進階設定</string>
-    <string name="squeeze_haptic_ignore_ringer_title">觸覺反饋忽略呼叫模式</string>
-    <string name="squeeze_haptic_ignore_ringer_summary">觸覺反饋发生時忽略振鈴模式</string>
-    <string name="squeeze_gestures_activated">觸发握壓手勢時振動</string>
-    <string name="squeeze_gestures_screen_off_activated">觸发鎖屏手勢時振動</string>
+    <string name="squeeze_haptic_ignore_ringer_title">觸覺回饋忽略鈴聲模式</string>
+    <string name="squeeze_haptic_ignore_ringer_summary">觸覺回饋發生時忽略鈴聲模式</string>
+    <string name="squeeze_gestures_activated">觸發握壓手勢時振動</string>
+    <string name="squeeze_gestures_screen_off_activated">觸發鎖定螢幕手勢時振動</string>
 
     <!-- Action Strings -->
     <string name="action_dialog_title">手勢動作</string>
@@ -57,7 +57,7 @@
     <string name="action_next_track">切換下一曲</string>
     <string name="action_volume_down">降低音量</string>
     <string name="action_volume_up">提高音量</string>
-    <string name="action_take_screenshot">撷取熒幕畫面</string>
-    <string name="action_turn_screen_on_off">開啟/關閉屏幕</string>
+    <string name="action_take_screenshot">擷取螢幕畫面</string>
+    <string name="action_turn_screen_on_off">開啟/關閉螢幕</string>
 
 </resources>
